tests/fails/11.mat
scalar a vector c[3]